# iterflat

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst
src/iterchain/: __init__.py  __main__.py
src/iterchain/core/: __init__.py
src/iterchain/tests/: __init__.py  test_0.py
src/iterflat/: __init__.py  __main__.py
src/iterflat/core/: __init__.py
src/iterflat/tests/: __init__.py  test_0.py
