[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project flattens iterables."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "iterflat"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.1.1"

[project.urls]
Download = "https://pypi.org/project/iterflat/#files"
Index = "https://pypi.org/project/iterflat/"
Source = "https://github.com/johannes-programming/iterflat/"
Website = "https://iterflat.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = false
